Bug 1920819 - Stop using MochiKit Async methods in test_bug342448.html r=dom-core,sfarre
MochiKit's callLater is wrapping setTimeout.
https://searchfox.org/mozilla-central/rev/1e8cec3727d6e09f4af41bb3d202b7a4c326ed84/testing/mochitest/MochiKit/Async.js#415-442

Differential Revision: https://phabricator.services.mozilla.com/D223432

UltraBlame original commit: 584c2affce83bc6ea4ae2645b4b787668a9f3f31

--- a/dom/tests/mochitest/bugs/test_bug342448.html
+++ b/dom/tests/mochitest/bugs/test_bug342448.html
@@ -7,6 +7,30 @@ HTML
 html
 >
 <
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+342448
+-
+-
+>
+<
 head
 >
 <
@@ -19,54 +43,6 @@ Bug
 <
 /
 title
->
-<
-script
-type
-=
-"
-text
-/
-javascript
-"
-src
-=
-"
-/
-MochiKit
-/
-Base
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-type
-=
-"
-text
-/
-javascript
-"
-src
-=
-"
-/
-MochiKit
-/
-Async
-.
-js
-"
->
-<
-/
-script
 >
 <
 script
@@ -252,10 +228,8 @@ ex
 )
 {
 }
-callLater
+setTimeout
 (
-.
-1
 function
 (
 )
@@ -288,7 +262,9 @@ finish
 )
 ;
 }
+100
 )
+;
 <
 /
 script
