Bug 1720500 - Enable HTTPS-First for form submission r=freddyb,necko-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D224287

UltraBlame original commit: ef0935ccc445714ab418850a8607adba5bba78cb

--- a/dom/security/test/https-first/test_form_submission.html
+++ b/dom/security/test/https-first/test_form_submission.html
@@ -262,6 +262,13 @@ example
 .
 com
 .
+The
+POST
+does
+not
+get
+upgraded
+.
 *
 *
 4
@@ -293,6 +300,14 @@ http
 example
 .
 com
+.
+The
+POST
+does
+not
+get
+upgraded
+.
 *
 *
 /
