Bug 1720500 - Enable HTTPS-First for form submission r=freddyb
Differential Revision: https://phabricator.services.mozilla.com/D224794

UltraBlame original commit: 2cc02a7da851744daf1725c1cd3874b62e00a4f8

--- a/dom/security/test/https-first/test_form_submission.html
+++ b/dom/security/test/https-first/test_form_submission.html
@@ -155,7 +155,6 @@ We
 perform
 each
 test
-with
 once
 with
 same
@@ -183,132 +182,6 @@ POST
 form
 requests
 .
-*
-In
-more
-detail
-:
-*
-*
-1
-.
-Test
-:
-Request
-that
-gets
-upgraded
-to
-https
-GET
-form
-submission
-.
-*
-*
-2
-.
-Test
-:
-Request
-that
-gets
-upgraded
-to
-https
-that
-upgraded
-request
-*
-gets
-timed
-out
-so
-https
--
-first
-send
-an
-http
-request
-GET
-form
-submission
-.
-*
-*
-3
-.
-Test
-:
-request
-that
-gets
-upgraded
-to
-https
-and
-sends
-a
-POST
-form
-*
-to
-http
-:
-/
-/
-example
-.
-com
-.
-The
-POST
-does
-not
-get
-upgraded
-.
-*
-*
-4
-.
-Test
-:
-Request
-where
-the
-https
-upgrade
-get
-timed
-out
--
->
-http
-and
-sends
-a
-POST
-form
-*
-to
-http
-:
-/
-/
-example
-.
-com
-.
-The
-POST
-does
-not
-get
-upgraded
-.
-*
 *
 /
 SimpleTest
@@ -420,11 +293,53 @@ success
 .
 Test
 GET
-initial
-request
-will
-be
+gets
 downgraded
+again
+/
+/
+2
+.
+a
+)
+If
+the
+second
+request
+is
+same
+-
+origin
+there
+is
+an
+upgrade
+exception
+/
+/
+so
+no
+upgrade
+is
+performed
+.
+/
+/
+2
+.
+b
+)
+If
+the
+submmission
+domain
+is
+different
+the
+request
+is
+upgraded
+.
 query
 :
 "
@@ -460,7 +375,9 @@ success
 Test
 POST
 formular
-gets
+does
+not
+get
 upgraded
 query
 :
@@ -497,10 +414,10 @@ success
 Test
 POST
 formular
-request
-will
-be
-downgraded
+does
+not
+get
+upgraded
 query
 :
 "
@@ -586,73 +503,69 @@ sameOrigin
 SAME_ORIGIN
 :
 CROSS_ORIGIN
-const
-expectedLocation
+let
+wantedScheme
 =
-origin
-.
-replace
-(
-"
-http
-:
-"
 currentTest
 .
 scheme
-)
 ;
-/
-/
-If
-GET
-request
-check
-that
-form
-was
-transfered
-by
-url
 if
 (
-currentTest
-.
-method
+!
+sameOrigin
+&
+&
+counter
 =
 =
 =
-"
-GET
-"
+1
 )
 {
-is
-(
-data
-.
-location
-expectedLocation
-+
-currentTest
-.
-query
-"
-Reached
+/
+/
+cross
+-
+origin
+still
+gets
+upgraded
+same
+-
+origin
+has
+a
+stored
+exception
+/
+/
+after
 the
-correct
-location
-for
-"
-+
-currentTest
+first
+fail
+/
+/
+See
+2
 .
-query
+a
 )
+and
+2
+.
+b
+)
+above
+.
+wantedScheme
+=
+"
+https
+:
+"
 ;
 }
-else
-{
 /
 /
 Since
@@ -660,7 +573,7 @@ the
 form
 is
 always
-send
+sent
 to
 example
 .
@@ -687,9 +600,7 @@ replace
 http
 :
 "
-currentTest
-.
-scheme
+wantedScheme
 )
 )
 true
@@ -706,15 +617,12 @@ currentTest
 query
 )
 ;
-}
 is
 (
 data
 .
 scheme
-currentTest
-.
-scheme
+wantedScheme
 {
 currentTest
 .
@@ -725,9 +633,7 @@ or
 downgraded
 to
 +
-currentTest
-.
-scheme
+wantedScheme
 )
 ;
 /
