Bug 1923120 - Changing the test vectors for test_WebCrypto_ECDH r=keeler
Differential Revision: https://phabricator.services.mozilla.com/D224774

UltraBlame original commit: e4c302172e257871ab55d39c89ed9b6c02ed2130

--- a/dom/crypto/test/test_WebCrypto_ECDH.html
+++ b/dom/crypto/test/test_WebCrypto_ECDH.html
@@ -5394,12 +5394,13 @@ importKey
 raw
 "
 tv
+.
+ecdh_p256_negative
+.
+raw_bad
 alg
 false
 [
-"
-deriveBits
-"
 ]
 )
 .
@@ -5550,12 +5551,13 @@ importKey
 unknown
 "
 tv
+.
+ecdh_p256
+.
+raw
 alg
 false
 [
-"
-deriveBits
-"
 ]
 )
 .
@@ -5705,12 +5707,13 @@ importKey
 raw
 "
 tv
+.
+ecdh_p256_negative
+.
+raw_short
 alg
 false
 [
-"
-deriveBits
-"
 ]
 )
 .
@@ -5860,12 +5863,13 @@ importKey
 raw
 "
 tv
+.
+ecdh_p256_negative
+.
+raw_long
 alg
 false
 [
-"
-deriveBits
-"
 ]
 )
 .
@@ -6014,12 +6018,13 @@ importKey
 raw
 "
 tv
+.
+ecdh_p256_negative
+.
+raw_compressed
 alg
 false
 [
-"
-deriveBits
-"
 ]
 )
 .
