Bug 1922980 - Make test_performance_paint_timing_helper.html no longer depends on the setTimeout r=emilio
It's written in a flaky way, should've used PerformanceObserver for it.

Differential Revision: https://phabricator.services.mozilla.com/D224822

UltraBlame original commit: 3c71cc75fae04a95428102e1c414e1e2dfbba3f6

--- a/dom/performance/tests/test_performance_paint_timing_helper.html
+++ b/dom/performance/tests/test_performance_paint_timing_helper.html
@@ -1,10 +1,66 @@
 <
 !
+-
+-
+Any
+copyright
+is
+dedicated
+to
+the
+Public
+Domain
+.
+http
+:
+/
+/
+creativecommons
+.
+org
+/
+publicdomain
+/
+zero
+/
+1
+.
+0
+/
+-
+-
+>
+<
+!
 DOCTYPE
 HTML
 >
 <
 html
+>
+<
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1518999
+-
+-
 >
 <
 head
@@ -171,26 +227,27 @@ logo
 png
 "
 ;
-img
-.
-onload
+const
+observer
 =
-function
+new
+PerformanceObserver
 (
+(
+entryList
 )
+=
+>
 {
-function
-getAndTestEntries
-(
-runCount
-)
-{
-function
-testEntries
-(
+const
 entries
+=
+entryList
+.
+getEntries
+(
 )
-{
+;
 opener
 .
 is
@@ -316,118 +373,21 @@ done
 )
 ;
 }
-const
-entries
-=
-performance
+)
+;
+observer
 .
-getEntriesByType
+observe
 (
+{
+type
+:
 '
 paint
 '
-)
-;
-if
-(
-entries
-.
-length
-<
-1
-)
-{
-if
-(
-runCount
-<
-4
-)
-{
-opener
-.
-SimpleTest
-.
-requestFlakyTimeout
-(
-"
-FCP
-is
-being
-registered
-asynchronously
-so
-wait
-a
-bit
-of
-time
-"
-)
-;
-setTimeout
-(
-function
-(
-)
-{
-getAndTestEntries
-(
-runCount
-+
-1
-)
-;
 }
-20
 )
 ;
-}
-else
-{
-opener
-.
-ok
-(
-false
-"
-Unable
-to
-find
-paint
-entries
-within
-a
-reasonable
-amount
-of
-time
-"
-)
-;
-opener
-.
-done
-(
-)
-;
-}
-}
-else
-{
-testEntries
-(
-entries
-)
-;
-}
-}
-getAndTestEntries
-(
-1
-)
-;
-}
 document
 .
 body
