Bug 1818352 - Add feedback toast in about:glean. r=chutten,fluent-reviewers,bolsson
Differential Revision: https://phabricator.services.mozilla.com/D224236

UltraBlame original commit: 2c8e868952f9785a81305a5d04b2e83c0ebf55bc

--- a/toolkit/content/aboutGlean.html
+++ b/toolkit/content/aboutGlean.html
@@ -1467,6 +1467,57 @@ div
 section
 >
 <
+moz
+-
+message
+-
+bar
+type
+=
+"
+success
+"
+id
+=
+"
+feedback
+"
+data
+-
+l10n
+-
+id
+=
+"
+about
+-
+glean
+-
+feedback
+-
+settings
+-
+only
+"
+data
+-
+l10n
+-
+attrs
+=
+"
+message
+"
+>
+<
+/
+moz
+-
+message
+-
+bar
+>
+<
 /
 body
 >
