Bug 1922368 [wpt PR 48428] - Implement :has-slotted pseudo class, a=testonly
Automatic update from web-platform-tests
Implement :has-slotted pseudo class

This pseudo class matches the presence of assigned nodes in the slot
element.

https://drafts.csswg.org/css-scoping-1/#the-has-slotted-pseudo

Bug: 369883705
Change-Id: I7c848204d7c39860f39fab19290ef366e94d0a3e
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5899636
Reviewed-by: Joey Arhar <jarharchromium.org>
Reviewed-by: Luke <lwarlowigalia.com>
Auto-Submit: Keith Cirkel <chromiumkeithcirkel.co.uk>
Commit-Queue: Keith Cirkel <chromiumkeithcirkel.co.uk>
Cr-Commit-Position: refs/heads/main{#1363222}

--

wpt-commits: 9cfac9133a1fdafa5cd7375c7f71011077f9ccf4
wpt-pr: 48428

UltraBlame original commit: 8b8e7d0595d2fceeff755b511061de1f06a7b9af

--- a/testing/web-platform/tests/css/css-scoping/has-slotted-changing-001.tentative.html
+++ b/testing/web-platform/tests/css/css-scoping/has-slotted-changing-001.tentative.html
@@ -284,6 +284,7 @@ test
 (
 function
 (
+t
 )
 {
 const
@@ -312,6 +313,24 @@ target
 '
 )
 ;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+{
+test
+.
+innerHTML
+=
+'
+'
+}
+)
+;
 let
 styles
 =
@@ -330,6 +349,93 @@ getPropertyValue
 color
 '
 )
+blue
+)
+;
+}
+"
+empty
+node
+is
+blue
+"
+)
+;
+test
+(
+function
+(
+t
+)
+{
+const
+test
+=
+document
+.
+getElementById
+(
+'
+test
+'
+)
+;
+const
+target
+=
+test
+.
+shadowRoot
+.
+getElementById
+(
+'
+target
+'
+)
+;
+test
+.
+innerHTML
+=
+'
+'
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+{
+test
+.
+innerHTML
+=
+'
+'
+}
+)
+;
+styles
+=
+getComputedStyle
+(
+target
+)
+;
+assert_equals
+(
+styles
+.
+getPropertyValue
+(
+'
+color
+'
+)
 green
 )
 ;
@@ -360,12 +466,89 @@ color
 blue
 )
 ;
+}
+"
+setting
+innerHTML
+to
+whitespace
+invalidates
+and
+becomes
+green
+then
+empty
+string
+becomes
+blue
+"
+)
+;
+test
+(
+function
+(
+t
+)
+{
+const
+test
+=
+document
+.
+getElementById
+(
+'
+test
+'
+)
+;
+const
+target
+=
+test
+.
+shadowRoot
+.
+getElementById
+(
+'
+target
+'
+)
+;
+test
+.
+replaceChildren
+(
+document
+.
+createElement
+(
+'
+div
+'
+)
+)
+;
+assert_equals
+(
+styles
+.
+getPropertyValue
+(
+'
+color
+'
+)
+green
+)
+;
 test
 .
 replaceChildren
 (
 )
-;
 ;
 styles
 =
@@ -384,7 +567,56 @@ getPropertyValue
 color
 '
 )
+blue
+)
+;
+}
+"
+calling
+replaceChildren
+invalidates
+and
+becomes
 green
+emptying
+with
+replaceChildren
+becomes
+blue
+"
+)
+;
+test
+(
+function
+(
+t
+)
+{
+const
+test
+=
+document
+.
+getElementById
+(
+'
+test
+'
+)
+;
+const
+target
+=
+test
+.
+shadowRoot
+.
+getElementById
+(
+'
+target
+'
 )
 ;
 const
@@ -401,75 +633,35 @@ div
 ;
 test
 .
+innerHTML
+=
+'
+'
+;
+test
+.
 append
 (
 div
 )
 ;
-styles
+t
+.
+add_cleanup
+(
+(
+)
 =
-getComputedStyle
-(
-target
-)
-;
-assert_equals
-(
-styles
-.
-getPropertyValue
-(
-'
-color
-'
-)
-blue
-)
-;
-const
-node
-=
-document
-.
-createTextNode
-(
-'
-'
-)
-;
-test
-.
-replaceChildren
-(
-node
-)
-;
-styles
-=
-getComputedStyle
-(
-target
-)
-;
-assert_equals
-(
-styles
-.
-getPropertyValue
-(
-'
-color
-'
-)
-blue
-)
-;
+>
+{
 test
 .
 innerHTML
 =
 '
 '
+}
+)
 ;
 styles
 =
@@ -492,7 +684,143 @@ green
 )
 ;
 }
-name
+"
+calling
+append
+invalidates
+and
+becomes
+green
+"
+)
+;
+test
+(
+function
+(
+t
+)
+{
+const
+test
+=
+document
+.
+getElementById
+(
+'
+test
+'
+)
+;
+const
+target
+=
+test
+.
+shadowRoot
+.
+getElementById
+(
+'
+target
+'
+)
+;
+const
+node
+=
+document
+.
+createTextNode
+(
+'
+'
+)
+;
+test
+.
+replaceChildren
+(
+node
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+{
+test
+.
+innerHTML
+=
+'
+'
+}
+)
+;
+styles
+=
+getComputedStyle
+(
+target
+)
+;
+assert_equals
+(
+styles
+.
+getPropertyValue
+(
+'
+color
+'
+)
+green
+)
+;
+test
+.
+replaceChildren
+(
+)
+;
+styles
+=
+getComputedStyle
+(
+target
+)
+;
+assert_equals
+(
+styles
+.
+getPropertyValue
+(
+'
+color
+'
+)
+blue
+)
+;
+}
+"
+calling
+replaceChildren
+(
+textnode
+)
+invalidates
+and
+becomes
+green
+"
 )
 ;
 <
