--- a/testing/web-platform/tests/css/css-scoping/has-slotted-changing-002.tentative.html
+++ b/testing/web-platform/tests/css/css-scoping/has-slotted-changing-002.tentative.html
@@ -163,35 +163,28 @@ head
 body
 >
 <
-div
+my
+-
+element
 id
 =
 "
 test
 "
 >
+Test
 <
-template
-shadowrootmode
-=
-"
-open
-"
+/
+my
+-
+element
 >
 <
-div
+template
 id
 =
 "
-inner
-"
->
-<
-template
-shadowrootmode
-=
-"
-open
+myTemplate
 "
 >
 <
@@ -265,27 +258,85 @@ style
 template
 >
 <
-slot
->
-<
-/
-slot
->
-<
-/
-div
->
-<
-/
-template
->
-<
-/
-div
->
-<
 script
 >
+customElements
+.
+define
+(
+'
+my
+-
+element
+'
+class
+extends
+HTMLElement
+{
+constructor
+(
+)
+{
+super
+(
+)
+;
+this
+.
+attachShadow
+(
+{
+mode
+:
+'
+open
+'
+slotAssignment
+:
+'
+manual
+'
+}
+)
+;
+this
+.
+shadowRoot
+.
+append
+(
+myTemplate
+.
+content
+.
+cloneNode
+(
+true
+)
+)
+;
+}
+get
+slot
+(
+)
+{
+return
+this
+.
+shadowRoot
+.
+querySelector
+(
+'
+slot
+'
+)
+;
+}
+}
+)
+;
 const
 blue
 =
@@ -314,6 +365,7 @@ test
 (
 function
 (
+t
 )
 {
 const
@@ -329,7 +381,7 @@ test
 )
 ;
 const
-inner
+target
 =
 test
 .
@@ -338,22 +390,27 @@ shadowRoot
 getElementById
 (
 '
-inner
+target
 '
 )
 ;
-const
-target
-=
-inner
+t
 .
-shadowRoot
-.
-getElementById
+add_cleanup
 (
+(
+)
+=
+>
+{
+test
+.
+innerHTML
+=
 '
-target
+Test
 '
+}
 )
 ;
 let
@@ -374,27 +431,124 @@ getPropertyValue
 color
 '
 )
-green
+blue
 )
 ;
-const
+}
+"
+empty
 node
+is
+blue
+"
+)
+;
+test
+(
+function
+(
+t
+)
+{
+const
+test
 =
 document
 .
-createTextNode
+getElementById
 (
 '
+test
 '
+)
+;
+const
+target
+=
+test
+.
+shadowRoot
+.
+getElementById
+(
+'
+target
+'
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+{
+test
+.
+innerHTML
+=
+'
+Test
+'
+}
 )
 ;
 test
 .
-replaceChildren
+slot
+.
+assign
 (
-node
+test
+.
+childNodes
+[
+0
+]
+)
+styles
+=
+getComputedStyle
+(
+target
 )
 ;
+assert_equals
+(
+test
+.
+slot
+.
+assignedNodes
+(
+)
+.
+length
+1
+)
+;
+assert_equals
+(
+styles
+.
+getPropertyValue
+(
+'
+color
+'
+)
+green
+)
+;
+test
+.
+slot
+.
+assign
+(
+)
 styles
 =
 getComputedStyle
@@ -415,30 +569,72 @@ color
 blue
 )
 ;
+}
+"
+manually
+assigning
+a
+text
 node
-.
-remove
-(
-)
-;
-styles
-=
-getComputedStyle
-(
-target
-)
-;
-assert_equals
-(
-styles
-.
-getPropertyValue
-(
-'
-color
-'
-)
+is
 green
+emptying
+assignment
+is
+blue
+"
+)
+;
+test
+(
+function
+(
+t
+)
+{
+const
+test
+=
+document
+.
+getElementById
+(
+'
+test
+'
+)
+;
+const
+target
+=
+test
+.
+shadowRoot
+.
+getElementById
+(
+'
+target
+'
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+{
+test
+.
+innerHTML
+=
+'
+Test
+'
+}
 )
 ;
 test
@@ -455,13 +651,6 @@ div
 >
 '
 ;
-styles
-=
-getComputedStyle
-(
-target
-)
-;
 assert_equals
 (
 styles
@@ -477,11 +666,17 @@ blue
 ;
 test
 .
-appendChild
+slot
+.
+assign
 (
-node
+.
+.
+.
+test
+.
+children
 )
-;
 styles
 =
 getComputedStyle
@@ -491,29 +686,16 @@ target
 ;
 assert_equals
 (
-styles
-.
-getPropertyValue
-(
-'
-color
-'
-)
-blue
-)
-;
 test
 .
-textContent
-=
-'
-'
-;
-styles
-=
-getComputedStyle
+slot
+.
+assignedNodes
 (
-target
+)
+.
+length
+1
 )
 ;
 assert_equals
@@ -529,8 +711,46 @@ color
 green
 )
 ;
+test
+.
+slot
+.
+assign
+(
+)
+styles
+=
+getComputedStyle
+(
+target
+)
+;
+assert_equals
+(
+styles
+.
+getPropertyValue
+(
+'
+color
+'
+)
+blue
+)
+;
 }
-name
+"
+manually
+assigning
+a
+Element
+is
+green
+emptying
+assignment
+is
+blue
+"
 )
 ;
 <
