Bug 1922375 [wpt PR 48429] - FLEDGE WPT: teach subordinate-frame to integrate with testdriver, a=testonly
Automatic update from web-platform-tests
FLEDGE WPT: teach subordinate-frame to integrate with testdriver

Previously https://chromium-review.googlesource.com/c/chromium/src/+/5895659
fixed a few tests to do it by hand, but I want to do use testdriver in
a lot more tests (e.g. to do attestation), so it makes more sense to
have subordinate-frame set things up for it correctly just like it does
for our own messages.

Change-Id: I48604d1c99678fcfedf41e446ef7e16546a4c3b6
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5905379
Reviewed-by: mmenke <mmenkechromium.org>
Commit-Queue: Maks Orlovich <morlovichchromium.org>
Cr-Commit-Position: refs/heads/main{#1363240}

--

wpt-commits: 6498db20718d9dcf256bca9139f51eab7e1cc567
wpt-pr: 48429

UltraBlame original commit: ec832340b70bd37e48fcdbe25bc7e5fb573ab5be

--- a/testing/web-platform/tests/fledge/tentative/resources/subordinate-frame.sub.html
+++ b/testing/web-platform/tests/fledge/tentative/resources/subordinate-frame.sub.html
@@ -223,6 +223,142 @@ parent
 ;
 /
 /
+In
+order
+to
+use
+some
+WPT
+test
+fixture
+features
+in
+another
+frame
+/
+/
+(
+particularly
+testdriver
+)
+we
+need
+to
+set
+the
+test
+context
+for
+the
+test
+/
+/
+driver
+.
+This
+is
+main
+window
+driving
+the
+test
+.
+/
+/
+/
+/
+To
+find
+that
+window
+follow
+both
+parent
+and
+opener
+links
+to
+very
+end
+;
+/
+/
+keeping
+in
+mind
+that
+top
+-
+level
+windows
+'
+parent
+fields
+loop
+back
+to
+/
+/
+themselves
+.
+let
+main_test_window
+=
+window
+;
+while
+(
+true
+)
+{
+if
+(
+main_test_window
+.
+opener
+)
+{
+main_test_window
+=
+main_test_window
+.
+opener
+;
+}
+else
+if
+(
+main_test_window
+.
+parent
+!
+=
+=
+main_test_window
+)
+{
+main_test_window
+=
+main_test_window
+.
+parent
+;
+}
+else
+{
+break
+;
+}
+}
+test_driver
+.
+set_test_context
+(
+main_test_window
+)
+;
+/
+/
 Fake
 Test
 class
