Bug 1922361 [wpt PR 48426] - WebKit export of https://bugs.webkit.org/show_bug.cgi?id=256180, a=testonly
Automatic update from web-platform-tests
WebKit export of https://bugs.webkit.org/show_bug.cgi?id=256180 (#48426)

--

wpt-commits: f15e421f79e7d9ad94dcbe85c3fe5354136ee4b1
wpt-pr: 48426

UltraBlame original commit: 7b9c0319e2be60f902f23ee4949d105191b0c8b2

--- a/testing/web-platform/tests/css/css-cascade/import-conditions.html
+++ b/testing/web-platform/tests/css/css-cascade/import-conditions.html
@@ -306,6 +306,50 @@ importCondition
 "
 supports
 (
+supports
+(
+display
+:
+block
+)
+)
+"
+matches
+:
+false
+}
+{
+importCondition
+:
+"
+supports
+(
+(
+)
+)
+"
+matches
+:
+false
+}
+{
+importCondition
+:
+"
+supports
+(
+)
+"
+matches
+:
+false
+}
+{
+importCondition
+:
+"
+supports
+(
 display
 :
 block
