Bug 1922412 [wpt PR 48433] - [testdriver.js] Don't expose testdriver-internal messages to tests, a=testonly
Automatic update from web-platform-tests
[testdriver.js] Don't expose testdriver-internal messages to tests (#48433)

Fixes #48326
--

wpt-commits: 1796ea251db6499e4d41755b412feaea495f2455
wpt-pr: 48433

UltraBlame original commit: 02b8a0861b9a8bacbdbd538eba463eaaa01ab484

--- a/testing/web-platform/tests/infrastructure/testdriver/actions/popup.html
+++ b/testing/web-platform/tests/infrastructure/testdriver/actions/popup.html
@@ -165,6 +165,27 @@ failed
 )
 ;
 }
+else
+{
+reject
+(
+"
+testdriver
+.
+js
+-
+internal
+messages
+should
+not
+be
+exposed
+to
+tests
+"
+)
+;
+}
 }
 )
 ;
