--- a/testing/web-platform/tests/infrastructure/testdriver/click_nested_crossorigin.sub.html
+++ b/testing/web-platform/tests/infrastructure/testdriver/click_nested_crossorigin.sub.html
@@ -236,6 +236,28 @@ click
 failed
 "
 )
+;
+}
+else
+{
+assert_unreached
+(
+"
+testdriver
+.
+js
+-
+internal
+messages
+should
+not
+be
+exposed
+to
+tests
+"
+)
+;
 }
 }
 )
