--- a/testing/web-platform/tests/infrastructure/testdriver/actions/crossOrigin.sub.html
+++ b/testing/web-platform/tests/infrastructure/testdriver/actions/crossOrigin.sub.html
@@ -204,6 +204,28 @@ actions
 failed
 "
 )
+;
+}
+else
+{
+assert_unreached
+(
+"
+testdriver
+.
+js
+-
+internal
+messages
+should
+not
+be
+exposed
+to
+tests
+"
+)
+;
 }
 }
 )
