--- a/testing/web-platform/tests/infrastructure/testdriver/click_iframe_crossorigin.sub.html
+++ b/testing/web-platform/tests/infrastructure/testdriver/click_iframe_crossorigin.sub.html
@@ -160,6 +160,28 @@ click
 failed
 "
 )
+;
+}
+else
+{
+assert_unreached
+(
+"
+testdriver
+.
+js
+-
+internal
+messages
+should
+not
+be
+exposed
+to
+tests
+"
+)
+;
 }
 }
 )
@@ -167,6 +189,33 @@ failed
 <
 /
 script
+>
+<
+!
+-
+-
+Make
+sure
+we
+add
+the
+event
+listener
+before
+loading
+the
+iframe
+to
+avoid
+potentially
+missing
+messages
+from
+the
+child
+.
+-
+-
 >
 <
 iframe
