Bug 1922431 [wpt PR 48436] - FSA: Fix more manual WPTs, a=testonly
Automatic update from web-platform-tests
FSA: Fix more manual WPTs

Two tests were using await in a non-async function. And a test helper
was using newAnonymousIframe which was updated at some point to
newIframeCredentialless.

Bug: 346991169
Change-Id: I4333b6abee03ed48cf0d10d3417a2c15fba06d30
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5906718
Commit-Queue: Nathan Memmott <memmottchromium.org>
Reviewed-by: Ayu Ishii <ayuichromium.org>
Cr-Commit-Position: refs/heads/main{#1363384}

--

wpt-commits: d22edced497cfb8eaf3572a3c29b84fb1115a54d
wpt-pr: 48436

UltraBlame original commit: e42c082099b92b21d24da82a1383ff8cebe5fee5

--- a/testing/web-platform/tests/file-system-access/local_FileSystemDirectoryHandle-partitioned-manual.https.tentative.html
+++ b/testing/web-platform/tests/file-system-access/local_FileSystemDirectoryHandle-partitioned-manual.https.tentative.html
@@ -636,6 +636,7 @@ before
 every
 test
 .
+async
 function
 clearDirectories
 (
@@ -720,6 +721,7 @@ sendTo
 =
 >
 {
+await
 clearDirectories
 (
 )
@@ -831,6 +833,7 @@ sendTo
 =
 >
 {
+await
 clearDirectories
 (
 )
@@ -996,6 +999,7 @@ sendTo
 =
 >
 {
+await
 clearDirectories
 (
 )
