--- a/testing/web-platform/tests/file-system-access/local_FileSystemFileHandle-partitioned-manual.https.tentative.html
+++ b/testing/web-platform/tests/file-system-access/local_FileSystemFileHandle-partitioned-manual.https.tentative.html
@@ -751,6 +751,7 @@ before
 every
 test
 .
+async
 function
 clearDirectories
 (
@@ -835,6 +836,7 @@ sendTo
 =
 >
 {
+await
 clearDirectories
 (
 )
@@ -964,6 +966,7 @@ sendTo
 =
 >
 {
+await
 clearDirectories
 (
 )
@@ -1129,6 +1132,7 @@ sendTo
 =
 >
 {
+await
 clearDirectories
 (
 )
