Bug 1922566 [wpt PR 48447] - [Digital Credentials WPT Tests] Fix tests some more, a=testonly
Automatic update from web-platform-tests
[Digital Credentials WPT Tests] Fix tests some more

This CL:
- Changes the exception thrown when the digital credentials API is
invoked when the page does not have transient user activation to
NotAllowedError in order to match spec.
- Reorders check for number of providers to after transient user
activation check in order to match spec.
- Makes allow-attribute.https.html test pass if the <iframe> does
not have user activation.

BUG=368070320

Change-Id: Iaa194da8d0a2a96d1fd40592dbe74e7bd7391bdc
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5883276
Reviewed-by: Ken Buchanan <kenrbchromium.org>
Reviewed-by: Avi Drissman <avichromium.org>
Commit-Queue: Peter Kotwicz <pkotwiczchromium.org>
Cr-Commit-Position: refs/heads/main{#1363719}

--

wpt-commits: b43d0fb275862f3a084ff45dff3cd840ba3f3807
wpt-pr: 48447

UltraBlame original commit: 0e64262a4f788214b3f2d3850ed686a63e89aa2c

--- a/testing/web-platform/tests/digital-credentials/allow-attribute.https.html
+++ b/testing/web-platform/tests/digital-credentials/allow-attribute.https.html
@@ -566,15 +566,57 @@ message
 =
 data
 ;
-assert_equals
+if
+(
+expectIsAllowed
+)
+{
+assert_true
 (
 name
-expectIsAllowed
-?
+=
+=
 "
 TypeError
 "
-:
+|
+|
+(
+name
+=
+=
+"
+NotAllowedError
+"
+&
+&
+message
+.
+includes
+(
+"
+transient
+activation
+"
+)
+)
+{
+iframe
+.
+outerHTML
+}
+-
+{
+message
+}
+)
+;
+}
+else
+{
+assert_equals
+(
+name
 "
 NotAllowedError
 "
@@ -589,6 +631,29 @@ message
 }
 )
 ;
+assert_false
+(
+message
+.
+includes
+(
+"
+transient
+activation
+"
+)
+{
+iframe
+.
+outerHTML
+}
+-
+{
+message
+}
+)
+;
+}
 iframe
 .
 remove
