Bug 1922635 [wpt PR 48451] - WebKit export of https://bugs.webkit.org/show_bug.cgi?id=280829, a=testonly
Automatic update from web-platform-tests
WebKit export: [WPT] video-rvfc/* tests are flakey due to unmuted autoplay policies in Safari (#48451)

https://bugs.webkit.org/show_bug.cgi?id=280829
--

wpt-commits: 0fbfc14b389e529ba4fdc91bdacfd30c4612b58c
wpt-pr: 48451

UltraBlame original commit: f3a868d668bafc8351c8b6134e3c1c002a4cff3a

--- a/testing/web-platform/tests/video-rvfc/request-video-frame-callback-dom.html
+++ b/testing/web-platform/tests/video-rvfc/request-video-frame-callback-dom.html
@@ -149,6 +149,12 @@ video
 ;
 video
 .
+muted
+=
+true
+;
+video
+.
 requestVideoFrameCallback
 (
 done
@@ -234,6 +240,12 @@ createElement
 video
 '
 )
+;
+video
+.
+muted
+=
+true
 ;
 document
 .
