--- a/testing/web-platform/tests/video-rvfc/request-video-frame-callback-repeating.html
+++ b/testing/web-platform/tests/video-rvfc/request-video-frame-callback-repeating.html
@@ -121,6 +121,12 @@ video
 '
 )
 ;
+video
+.
+muted
+=
+true
+;
 document
 .
 body
@@ -354,6 +360,12 @@ createElement
 video
 '
 )
+;
+video
+.
+muted
+=
+true
 ;
 document
 .
