--- a/testing/web-platform/tests/video-rvfc/request-video-frame-callback.html
+++ b/testing/web-platform/tests/video-rvfc/request-video-frame-callback.html
@@ -167,6 +167,12 @@ video
 '
 )
 ;
+video
+.
+muted
+=
+true
+;
 document
 .
 body
@@ -305,6 +311,12 @@ createElement
 video
 '
 )
+;
+video
+.
+muted
+=
+true
 ;
 document
 .
@@ -463,6 +475,12 @@ createElement
 video
 '
 )
+;
+video
+.
+muted
+=
+true
 ;
 document
 .
@@ -635,6 +653,12 @@ createElement
 video
 '
 )
+;
+video
+.
+muted
+=
+true
 ;
 document
 .
@@ -817,6 +841,12 @@ createElement
 video
 '
 )
+;
+video
+.
+muted
+=
+true
 ;
 video
 .
