--- a/testing/web-platform/tests/video-rvfc/request-video-frame-callback-parallel.html
+++ b/testing/web-platform/tests/video-rvfc/request-video-frame-callback-parallel.html
@@ -125,6 +125,12 @@ video
 '
 )
 ;
+video
+.
+muted
+=
+true
+;
 document
 .
 body
@@ -273,6 +279,12 @@ createElement
 video
 '
 )
+;
+video
+.
+muted
+=
+true
 ;
 document
 .
