Bug 1922706 [wpt PR 48461] - [css-scroll-snap-2] Resolve scroll-start-targets with reverse DOM order, a=testonly
Automatic update from web-platform-tests
[css-scroll-snap-2] Resolve scroll-start-targets with reverse DOM order

Per CSSWG resolution[1], user agents should handle competing
scroll-start-targets by scrolling to each target in reverse-DOM-order.

This patch implements this and re-enables scroll-start-target tests.

Note that, for now, we only need to store the scroll-start-target which
is first-in-tree/DOM order and not the whole list. This is because when
we scroll to the scroll-start-targets (in reverse DOM order) we're
effectively only scrolling to the first-in-tree/DOM order
scroll-start-target. Scrolling to each target will only have an effect
when a "nearest" value is accepted by scroll-snap-align which will have
the same effect as "nearest" in scrollIntoView. So for now we can keep
track of just one element, the first in tree/DOM order.

[1] https://github.com/w3c/csswg-drafts/issues/10774#issuecomment-2358920264

Bug: 40909052, 368038561
Change-Id: I029920bdb053ae258932e3e7579f28d8256baf70
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5881923
Commit-Queue: David Awogbemila <awogbemilachromium.org>
Reviewed-by: Ian Kilpatrick <ikilpatrickchromium.org>
Cr-Commit-Position: refs/heads/main{#1363980}

--

wpt-commits: e87b420137180382c1bbaacabb2a9b768622775f
wpt-pr: 48461

UltraBlame original commit: d3d9c2371041858248980ec82c64646e6b88e03f

--- a/testing/web-platform/tests/css/css-scroll-snap-2/scroll-start-target/scroll-start-target-nested-container.tentative.html
+++ b/testing/web-platform/tests/css/css-scroll-snap-2/scroll-start-target/scroll-start-target-nested-container.tentative.html
@@ -217,6 +217,59 @@ body
 <
 style
 >
+/
+*
+*
+large
+-
+space
+divs
+are
+added
+to
+simplify
+scrolling
+calculations
+(
+i
+.
+e
+.
+expected
+offsets
+are
+just
+distances
+from
+scroller
+border
+top
+to
+scrollee
+border
+top
+)
+.
+*
+/
+.
+large
+-
+space
+{
+position
+:
+absolute
+;
+height
+:
+500vh
+;
+width
+:
+500vw
+;
+}
 #
 space
 -
@@ -254,6 +307,10 @@ overflow
 :
 scroll
 ;
+position
+:
+relative
+;
 background
 -
 color
@@ -276,11 +333,11 @@ left
 ;
 width
 :
-300px
+400px
 ;
 height
 :
-300px
+400px
 ;
 overflow
 :
@@ -321,7 +378,6 @@ start
 target
 :
 auto
-auto
 ;
 }
 <
@@ -337,6 +393,25 @@ outer
 -
 container
 "
+>
+<
+div
+class
+=
+"
+large
+-
+space
+"
+id
+=
+"
+large_space_outer
+"
+>
+<
+/
+div
 >
 <
 div
@@ -361,6 +436,25 @@ inner
 -
 container
 "
+>
+<
+div
+class
+=
+"
+large
+-
+space
+"
+id
+=
+"
+large_space_inner
+"
+>
+<
+/
+div
 >
 <
 div
@@ -498,138 +592,112 @@ getBoundingClientRect
 .
 height
 ;
+let
+outer_to_target_scrolltop
+=
+/
+*
+outer
+space
+-
+filler
+*
+/
+space_filler_height
++
+/
+*
+20px
+top
+*
+/
+inner_scroller_top_offset
++
+/
+*
+inner
+space
+filler
+*
+/
+space_filler_height
+;
+let
+outer_to_inner_scrolltop
+=
+/
+*
+outer
+space
+-
+filler
+*
+/
+space_filler_height
++
+/
+*
+20px
+top
+*
+/
+inner_scroller_top_offset
+;
+let
+inner_to_target_scrolltop
+=
+/
+*
+inner
+space
+filler
+*
+/
+space_filler_height
+;
 async
 function
 resetDisplay
 (
 )
 {
+outer_container
+.
+style
+.
+display
+=
+"
+block
+"
+;
+inner_container
+.
+style
+.
+display
+=
+"
+block
+"
+;
+target
+.
+style
+.
+display
+=
+"
+block
+"
+;
 return
-new
-Promise
+waitForAnimationFrames
 (
-(
-resolve
-)
-=
->
-{
-if
-(
-getComputedStyle
-(
-outer_container
-)
-.
-display
-=
-=
-"
-block
-"
-&
-&
-getComputedStyle
-(
-inner_container
-)
-.
-display
-=
-=
-"
-block
-"
-&
-&
-getComputedStyle
-(
-target
-)
-.
-display
-=
-=
-"
-block
-"
-)
-{
-resolve
-(
+2
 )
 ;
 }
-else
-{
-outer_container
-.
-style
-.
-display
-=
-"
-block
-"
-;
-inner_container
-.
-style
-.
-display
-=
-"
-block
-"
-;
-target
-.
-style
-.
-display
-=
-"
-block
-"
-;
-requestAnimationFrame
-(
-async
-(
-)
-=
->
-{
-await
-resetDisplay
-(
-)
-;
-resolve
-(
-)
-;
-}
-)
-;
-}
-}
-)
-;
-}
-let
-initial_expected_scroll_top
-=
-space_filler_height
-+
-inner_scroller_top_offset
-+
-inner_content_height
--
-outer_container
-.
-clientHeight
-;
 promise_test
 (
 async
@@ -649,7 +717,7 @@ assert_equals
 outer_container
 .
 scrollTop
-initial_expected_scroll_top
+outer_to_target_scrolltop
 "
 outer
 -
@@ -664,6 +732,36 @@ start
 target
 "
 )
+;
+/
+/
+Remove
+large_space_outer
+so
+we
+can
+observe
+outer
+-
+container
+adjust
+to
+/
+/
+its
+new
+content
+height
+.
+large_space_outer
+.
+style
+.
+display
+=
+"
+none
+"
 ;
 inner_container
 .
@@ -696,12 +794,25 @@ outer
 -
 container
 has
-no
-content
+only
+the
+outer
+space
+filler
 to
 scroll
 "
 )
+;
+large_space_outer
+.
+style
+.
+display
+=
+"
+initial
+"
 ;
 inner_container
 .
@@ -724,7 +835,7 @@ assert_equals
 outer_container
 .
 scrollTop
-initial_expected_scroll_top
+outer_to_target_scrolltop
 "
 outer
 -
@@ -782,7 +893,7 @@ assert_equals
 outer_container
 .
 scrollTop
-initial_expected_scroll_top
+outer_to_target_scrolltop
 "
 outer
 -
@@ -797,6 +908,36 @@ start
 target
 "
 )
+;
+/
+/
+Remove
+large_space_outer
+so
+we
+can
+observe
+outer
+-
+container
+adjust
+to
+/
+/
+its
+new
+content
+height
+.
+large_space_outer
+.
+style
+.
+display
+=
+"
+none
+"
 ;
 inner_container
 .
@@ -841,11 +982,7 @@ assert_equals
 inner_container
 .
 scrollTop
-inner_content_height
--
-inner_container
-.
-clientHeight
+inner_to_target_scrolltop
 "
 inner
 -
@@ -873,17 +1010,6 @@ max
 scroll
 offset
 .
-const
-scrollbar_width
-=
-outer_container
-.
-offsetHeight
--
-outer_container
-.
-clientHeight
-;
 assert_equals
 (
 outer_container
@@ -916,6 +1042,16 @@ direct
 children
 "
 )
+;
+large_space_outer
+.
+style
+.
+display
+=
+"
+initial
+"
 ;
 inner_container
 .
@@ -957,7 +1093,7 @@ assert_equals
 outer_container
 .
 scrollTop
-initial_expected_scroll_top
+outer_to_target_scrolltop
 "
 outer
 -
@@ -1022,7 +1158,21 @@ targets
 the
 /
 /
-grandchild
+first
+-
+in
+-
+tree
+-
+order
+(
+i
+.
+e
+.
+the
+child
+)
 wins
 /
 is
@@ -1078,15 +1228,14 @@ async
 =
 >
 {
-target
+inner_container
 .
 style
 .
 scrollStartTarget
 =
 "
-auto
-auto
+none
 "
 ;
 await
@@ -1103,7 +1252,7 @@ assert_equals
 outer_container
 .
 scrollTop
-initial_expected_scroll_top
+outer_to_target_scrolltop
 "
 outer
 -
@@ -1140,7 +1289,6 @@ scrollStartTarget
 =
 "
 auto
-auto
 "
 ;
 await
@@ -1176,97 +1324,41 @@ assert_equals
 outer_container
 .
 scrollTop
-initial_expected_scroll_top
+outer_to_inner_scrolltop
 "
 outer
 -
 container
 is
-still
 scrolled
 to
 inner
-scroll
 -
-start
--
-target
-"
-)
-;
-/
-/
-Make
-target
-no
-longer
-a
-scroll
--
-start
--
-target
-.
-The
-outer
 container
-'
-s
-/
-/
-scroll
--
-start
--
-target
-should
-now
-be
+(
+which
+is
+before
 the
-inner
-container
-.
-target
-.
-style
-.
-scrollStartTarget
-=
 "
-none
-none
-"
-;
-await
-waitForAnimationFrames
-(
-2
-)
-;
-assert_equals
-(
-outer_container
-.
-scrollTop
-space_filler_height
 +
-inner_scroller_top_offset
 "
-outer
--
-container
-is
-scrolled
-to
 inner
+scroll
 -
-container
+start
+-
+target
+in
+tree
+order
+)
 "
 )
 ;
 }
 "
-inner
+outer
 scroll
 -
 start
@@ -1275,7 +1367,7 @@ target
 takes
 precedence
 over
-outer
+inner
 "
 )
 ;
@@ -1378,7 +1470,6 @@ scrollStartTarget
 =
 "
 none
-none
 "
 ;
 await
@@ -1395,7 +1486,7 @@ assert_equals
 outer_container
 .
 scrollTop
-initial_expected_scroll_top
+outer_to_target_scrolltop
 "
 outer
 -
@@ -1432,7 +1523,6 @@ scrollStartTarget
 =
 "
 auto
-auto
 "
 ;
 await
@@ -1446,7 +1536,7 @@ assert_equals
 outer_container
 .
 scrollTop
-initial_expected_scroll_top
+outer_to_inner_scrolltop
 "
 outer
 -
@@ -1458,9 +1548,31 @@ to
 inner
 scroll
 -
+container
+"
++
+"
+as
+it
+is
+a
+scroll
+-
 start
 -
 target
+and
+comes
+before
+#
+target
+in
+"
++
+"
+tree
+-
+order
 "
 )
 ;
@@ -1494,17 +1606,7 @@ assert_equals
 outer_container
 .
 scrollTop
-space_filler_height
-+
-inner_scroller_top_offset
-+
-inner_container
-.
-offsetHeight
--
-outer_container
-.
-clientHeight
+outer_to_inner_scrolltop
 "
 outer
 -
@@ -1523,15 +1625,7 @@ assert_equals
 inner_container
 .
 scrollTop
-space_filler_height
-+
-target
-.
-offsetHeight
--
-inner_container
-.
-clientHeight
+inner_to_target_scrolltop
 "
 inner
 -
