--- a/testing/web-platform/tests/css/css-scroll-snap-2/scroll-start-target/scroll-start-target-span.tentative.html
+++ b/testing/web-platform/tests/css/css-scroll-snap-2/scroll-start-target/scroll-start-target-span.tentative.html
@@ -33,7 +33,14 @@ scroll
 start
 -
 target
-*
+with
+a
+&
+lt
+;
+span
+>
+element
 <
 /
 title
@@ -109,6 +116,29 @@ js
 script
 >
 <
+script
+src
+=
+"
+/
+css
+/
+css
+-
+animations
+/
+support
+/
+testcommon
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -118,69 +148,54 @@ body
 <
 style
 >
+*
+{
+margin
+:
+0px
+;
+}
 .
-spacer
+space
 {
 width
 :
-200vw
+150
+%
 ;
 height
 :
-200vh
+150
+%
 ;
 }
 .
 box
 {
-position
+height
 :
-absolute
+50px
 ;
 width
 :
-60vw
+50px
 ;
-height
+border
 :
-60vh
-;
-}
-.
-top_left
-{
-top
-:
-0px
-;
-left
-:
-0px
+solid
+1px
+black
 ;
 background
 -
 color
 :
-red
+turquoise
 ;
 }
 .
-center
+target
 {
-top
-:
-60vh
-;
-left
-:
-60vw
-;
-background
--
-color
-:
-purple
-;
 scroll
 -
 start
@@ -191,21 +206,19 @@ auto
 ;
 }
 .
-bottom_right
+scroller
 {
-top
+overflow
 :
-120vh
+scroll
 ;
-left
+height
 :
-120vw
+100px
 ;
-background
--
-color
+width
 :
-yellow
+100px
 ;
 }
 <
@@ -214,28 +227,23 @@ style
 >
 <
 div
-class
-=
-"
-spacer
-"
->
-<
-/
-div
->
-<
-div
-class
-=
-"
-top_left
-box
-"
 id
 =
 "
-top_left_box
+scroller
+"
+class
+=
+"
+scroller
+"
+>
+<
+div
+class
+=
+"
+space
 "
 >
 <
@@ -243,17 +251,24 @@ top_left_box
 div
 >
 <
-div
-class
-=
-"
-center
-box
-"
+span
 id
 =
 "
-centerbox
+target
+"
+class
+=
+"
+target
+"
+>
+<
+div
+class
+=
+"
+box
 "
 >
 <
@@ -261,13 +276,20 @@ centerbox
 div
 >
 <
+/
+span
+>
+<
 div
 class
 =
 "
-bottom_right
-box
+space
 "
+>
+<
+/
+div
 >
 <
 /
@@ -276,98 +298,84 @@ div
 <
 script
 >
-test
+promise_test
 (
+async
 (
 t
 )
 =
 >
 {
-let
-scroller
-=
-document
-.
-scrollingElement
+await
+waitForAnimationFrames
+(
+2
+)
 ;
-let
-top_left_box
+const
+scroller
 =
 document
 .
 getElementById
 (
 "
-top_left_box
+scroller
 "
 )
 ;
 const
-expected_scroll_top
+target
 =
-top_left_box
+document
 .
-getBoundingClientRect
+getElementById
 (
+"
+target
+"
 )
-.
-height
 ;
-const
-expected_scroll_left
-=
-top_left_box
-.
-getBoundingClientRect
-(
-)
-.
-width
-;
-assert_approx_equals
+assert_equals
 (
 scroller
 .
 scrollTop
-expected_scroll_top
-1
-"
-scroll
--
-start
--
 target
-sets
-initial
-vertical
-scroll
-position
-"
-)
-;
-assert_approx_equals
-(
-scroller
 .
-scrollLeft
-expected_scroll_left
-1
+offsetTop
 "
+scroller
+is
+initially
+scrolled
+to
+it
+<
+span
+>
 scroll
 -
 start
 -
 target
-sets
-initial
-horizontal
-scroll
-position
 "
 )
 ;
 }
+"
+<
+span
+>
+scroll
+-
+start
+-
+target
+is
+honored
+"
 )
 ;
 <
@@ -377,4 +385,8 @@ script
 <
 /
 body
+>
+<
+/
+html
 >
