Bug 1922726 [wpt PR 48463] - Add cache-storage as a value of deliveryType in resource timing, a=testonly
Automatic update from web-platform-tests
Add cache-storage as a value of deliveryType in resource timing

This CL adds a new value |cache-storage| to the deliveryType field in
resource timing. It is specified when the response comes from
CacheStorage either via Fetch handler in the ServiceWorker or from
the static routing API when the cache rule is specified and used.

Explainer: https://github.com/WICG/service-worker-static-routing-api/blob/main/resource-timing-api.md
Bug: 41496865
Change-Id: Iff62aa9394244f28d88cbc73a94ff87c6c3e56a8
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5901298
Commit-Queue: Keita Suzuki <suzukikeitachromium.org>
Reviewed-by: Takashi Toyoshima <toyoshimchromium.org>
Reviewed-by: Shunya Shishido <sisidovskichromium.org>
Reviewed-by: Yoshisato Yanagisawa <yyanagisawachromium.org>
Cr-Commit-Position: refs/heads/main{#1364026}

--

wpt-commits: 72b510aca3019a3f56bc62cfa6b25484ad2231b6
wpt-pr: 48463

UltraBlame original commit: 6fd6dd71a96821bb2a474fc7377d326dd91c173a

--- a/testing/web-platform/tests/service-workers/service-worker/tentative/static-router/static-router-resource-timing.https.html
+++ b/testing/web-platform/tests/service-workers/service-worker/tentative/static-router/static-router-resource-timing.https.html
@@ -670,6 +670,19 @@ responseStart
 description
 )
 ;
+assert_equals
+(
+entry
+.
+deliveryType
+'
+cache
+-
+storage
+'
+description
+)
+;
 }
 else
 {
