Bug 1922676 [wpt PR 48455] - Remove obsolete checks for testdriver-internal messages, a=testonly
Automatic update from web-platform-tests
Remove obsolete checks for testdriver-internal messages (#48455)

No longer necessary after fixing #48326.
--

wpt-commits: 6d6c302d341c92e0b69750209b24981eeb76f4df
wpt-pr: 48455

UltraBlame original commit: c2b4738904911b43a3114f6efb33b9a29c027eec

--- a/testing/web-platform/tests/event-timing/crossiframe.html
+++ b/testing/web-platform/tests/event-timing/crossiframe.html
@@ -537,17 +537,13 @@ entries
 "
 )
 ;
-validateEntries
-(
-pointerDowns
-)
-;
 observedPointerDown
 =
 true
 ;
 resolve
 (
+pointerDowns
 )
 ;
 }
@@ -568,20 +564,14 @@ event
 }
 )
 ;
+await
 clickAndBlockMain
 (
 '
 button
 '
 )
-.
-then
-(
-(
-)
-=
->
-{
+;
 clickDone
 =
 performance
@@ -590,7 +580,15 @@ now
 (
 )
 ;
-}
+const
+pointerDowns
+=
+await
+observerPromise
+;
+validateEntries
+(
+pointerDowns
 )
 ;
 const
@@ -616,32 +614,6 @@ event
 =
 >
 {
-/
-/
-testdriver
--
-complete
-is
-a
-webdriver
-internal
-event
-if
-(
-event
-.
-data
-.
-type
-!
-=
-"
-testdriver
--
-complete
-"
-)
-{
 t
 .
 step
@@ -665,7 +637,6 @@ resolve
 (
 )
 ;
-}
 }
 false
 )
@@ -733,16 +704,8 @@ send
 (
 )
 ;
-return
-Promise
-.
-all
-(
-[
-observerPromise
+await
 childFrameEntriesPromise
-]
-)
 ;
 }
 "
